--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <shared-sidebar></shared-sidebar>
   </div>
 
-  <div class="col-3">
+  <div class="col">
     <!-- router -->
     <!-- <shared-home-page></shared-home-page> -->
     <!-- <shared-about-page></shared-about-page> -->
