--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,1 +1,17 @@
-<p>by-country-page works!</p>
+<h2>Por País</h2>
+
+<hr>
+
+<div class="row">
+    <div class="col">
+        <!-- searchBox -->
+        <shared-search-box (onValue)="searchByCountry($event)"
+        placeholder="Buscar por pais"></shared-search-box>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <countries-table [countries]="countries"></countries-table>
+    </div>
+</div>
