--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,1 +1,17 @@
-<p>by-region-page works!</p>
+<h2>Por Región</h2>
+
+<hr>
+
+<div class="row">
+    <div class="col">
+        <!-- searchBox -->
+        <shared-search-box (onValue)="searchByRegion($event)"
+        placeholder="Buscar por region"></shared-search-box>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <countries-table [countries]="countries"></countries-table>
+    </div>
+</div>
