Se arregla error de rutas

--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -8,7 +8,7 @@
         <!-- (onValue)="searchByCapital($event)" -->
         <shared-search-box (onDebounce)="searchByCapital($event)"
         placeholder="Buscar por capital"
-        [valueTerm]="termSearch || ''"></shared-search-box>
+        [valueTerm]="termSearch"></shared-search-box>
     </div>
 </div>
 
