--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -5,7 +5,8 @@
 <div class="row">
     <div class="col">
         <!-- searchBox -->
-        <shared-search-box (onValue)="searchByCountry($event)"
+        <shared-search-box (onDebounce)="searchByCountry($event)"
+        [valueTerm]="termSearch"
         placeholder="Buscar por pais"></shared-search-box>
     </div>
 </div>
